# FlarkDJ

./: .gitignore  BUILD_SUCCESS.md  DISTRIBUTION.md  GUI_IMPROVEMENTS.md  INSTALLATION.md  NATIVE_PLUGIN_SUMMARY.md  PEDALBOARD.md  PLUGINS.md  PLUGIN_DEVELOPMENT.md  README.md  installer.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-native.yml  ci.yml
electron-app/: README.md  main.js  package.json  preload.js
electron-app/app/: README.md  index.html
electron-app/app/assets/styles/: pedalboard.css
electron-app/app/src/: electron-bridge.js  main.js
electron-app/app/src/audio/effects/: butterworth-filter.js  flanger.js  reverb.js
electron-app/app/src/ui/controls/: knob.js
native/: BUILD.md  BUILD_STATUS.md  CMakeLists.txt  FlarkDJ.jucer  FlarkDJDSP.h  FlarkDJEditor.cpp  FlarkDJEditor.h  FlarkDJProcessor.cpp  FlarkDJProcessor.h  FlarkDJWebView.h  README.md  build.sh  mingw-w64-toolchain.cmake
plugins/: AAXPlugin.d.ts  AAXPlugin.js  AudioUnitPlugin.d.ts  AudioUnitPlugin.js  CLAPPlugin.d.ts  CLAPPlugin.js  LV2Plugin.d.ts  LV2Plugin.js  PluginWrapper.d.ts  PluginWrapper.js  README.md  StandaloneApp.d.ts  StandaloneApp.js  VST3Plugin.d.ts  VST3Plugin.js  index.d.ts  index.js
plugins/aax/: README.md
plugins/au/: README.md
plugins/clap/: README.md
plugins/lv2/: README.md
plugins/standalone/: README.md
plugins/vst3/: README.md
release/: README.md  flark-dj-1.0.0.tgz
releases/: RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md
releases/FlarkDJ-Linux/FlarkDJ.lv2/: dsp.ttl  ui.ttl
releases/FlarkDJ-v1.0.0-Linux-x86_64/: FlarkDJ  LICENSE  README.md
releases/FlarkDJ-v1.0.0-Linux-x86_64/FlarkDJ.lv2/: dsp.ttl  manifest.ttl  ui.ttl
releases/FlarkDJ-v1.0.0-Linux-x86_64/FlarkDJ.vst3/Contents/Resources/: moduleinfo.json
releases/v1.1.0/: README.md  RELEASE_NOTES.md
scripts/: build-installer.sh  build-plugins.sh  create-distribution.sh
src/: index.test.ts  index.ts
src/analysis/: SpectrumAnalyzer.ts
src/core/: AudioEngine.test.ts  AudioEngine.ts
src/effects/: BaseEffect.ts  DelayEffect.ts  FilterEffect.test.ts  FilterEffect.ts  ReverbEffect.ts
src/midi/: MIDILearnManager.ts
src/modulation/: LFOManager.test.ts  LFOManager.ts  MacroController.test.ts  MacroController.ts  XYPadController.ts
src/plugin/: AAXPlugin.ts  AudioUnitPlugin.ts  CLAPPlugin.ts  LV2Plugin.ts  PluginWrapper.ts  StandaloneApp.ts  VST3Plugin.ts  index.ts
src/presets/: PresetManager.test.ts  PresetManager.ts
src/snapshots/: SnapshotManager.test.ts  SnapshotManager.ts
src/types/: index.ts
web-app/: server.py
web-app/src/: juce-bridge.js  main.js
web-app/src/audio/: audio-engine.js
web-app/src/audio/effects/: base-effect.js  delay.js  effect-factory.js
web-app/src/interactions/: connection-manager.js  context-menu.js  drag-drop.js
web-app/src/ui/: effect-pedal.js  pedalboard.js  ui-controller.js
web-app/src/utils/: config-manager.js
